# auralis

./: .editorconfig  .git_commit_msg.txt  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  Cargo.toml  README.md  Taskfile.yml  commit-msg.txt  commit_msg.txt  create_fsd.js  package.json  pnpm-lock.yaml  pr_body.txt
crates/adapters-ffmpeg/: Cargo.toml
crates/adapters-ffmpeg/examples/: probe.rs
crates/adapters-ffmpeg/src/: lib.rs  mock.rs
crates/adapters-ffmpeg/src/ffprobe/: adapter.rs  command.rs  dto.rs  error.rs  mod.rs  parser.rs
crates/adapters-storage/: Cargo.toml  build.rs
crates/adapters-storage/migrations/: 0001_create_projects.sql  0002_create_jobs.sql  0004_create_artifacts.sql  0005_artifacts_state_and_outbox.sql  0006_add_active_job_id.sql  0007_terminal_lifecycle_fields.sql  0008_outbox_retention_index.sql  0009_fix_outbox_retention_index.sql  0010_create_runtime_migrations.sql  0011_add_job_revision.sql  0012_outbox_aggregate.sql  0013_rebuild_outbox_retention_index.sql
crates/adapters-storage/src/: lib.rs  local.rs  memory.rs
crates/adapters-storage/src/local/: artifact_store.rs  mod.rs  storage_key.rs
crates/adapters-storage/src/local/artifact_store/: cleanup.rs  deletion.rs  mod.rs  path_guard.rs  resolver.rs  staging.rs  store.rs  tests.rs  writer.rs
crates/adapters-storage/src/local/temp_workspace/: janitor.rs  mod.rs  port.rs  tests.rs  tests_read_resolve.rs
crates/adapters-storage/src/memory/: artifact_index.rs  database.rs  job_repository.rs  mod.rs  project_repository.rs  recovery_gateway.rs  unit_of_work.rs
crates/adapters-storage/src/sqlite/: artifact_index.rs  artifact_mapper.rs  artifact_row.rs  connection.rs  connection_tests.rs  helpers.rs  job.rs  job_mapper.rs  job_repository.rs  job_row.rs  mod.rs  outbox_mapper.rs  outbox_repository.rs  outbox_row.rs  project_mapper.rs  project_repository.rs  project_row.rs  recovery_gateway.rs  transaction_gateway.rs  unit_of_work.rs
crates/adapters-storage/src/sqlite/artifact_index/: mapper.rs  mod.rs  mutations.rs  queries.rs  repository.rs  row.rs  serialization.rs  test_support.rs  tests.rs
crates/adapters-storage/src/sqlite/migrations_runtime/: backfill_artifacts.rs  mod.rs  outbox_temp_paths.rs  tests.rs
crates/adapters-storage/src/sqlite/outbox_repository/: claim.rs  mod.rs  mutations.rs  queries.rs  tests.rs
crates/adapters-storage/src/sqlite/preflight/: error.rs  inspector.rs  lock.rs  manifest.rs  mod.rs  stages.rs  state_machine.rs  tests.rs
crates/adapters-storage/src/sqlite/recovery/: mod.rs  orphan_writes.rs  pair_writes.rs  snapshot.rs  tests.rs
crates/adapters-storage/src/sqlite/unit_of_work/: artifact_writes.rs  job_writes.rs  mod.rs  outbox_writes.rs  project_writes.rs  repository.rs
crates/adapters-tauri/: Cargo.toml
crates/adapters-tauri/src/: event_publisher.rs  event_publisher_tests.rs  job_event_bridge.rs  job_event_dto.rs  job_event_mapper.rs  lib.rs
crates/adapters-tauri/src/dto/: job.rs  job_event.rs  mapper.rs  mod.rs
crates/adapters-ytdlp/: Cargo.toml
crates/adapters-ytdlp/src/: lib.rs  mock.rs
crates/adapters-ytdlp/src/ytdlp/: adapter.rs  command.rs  containment.rs  dto.rs  error.rs  mod.rs  parser.rs  tests.rs  validation.rs
crates/adapters-ytdlp/tests/fixtures/: youtube_basic.json  youtube_duration.json  youtube_fallback_resolution.json  youtube_missing_width_height.json  youtube_none_codecs.json
crates/application/: Cargo.toml
crates/application/src/: commands.rs  error.rs  lib.rs  test_utils.rs
crates/application/src/observability/: execution_summary.rs  mod.rs
crates/application/src/services/: artifact_finalizer.rs  job_lifecycle_coordinator.rs  mod.rs
crates/application/src/test_utils/: mock_artifact_index.rs  mock_artifact_store.rs  mock_job_scheduler.rs  mock_storage_unit_of_work.rs  mod.rs
crates/application/src/usecases/: mod.rs  test_utils.rs
crates/application/src/usecases/artifact/: list_project_artifacts.rs  mod.rs  register.rs  resolve_path.rs  write_small.rs
crates/application/src/usecases/job/: cancel.rs  list.rs  mod.rs  recover_interrupted.rs  start_mock.rs
crates/application/src/usecases/media/: download_youtube_video.rs  import_local_media.rs  mod.rs  probe_local.rs
crates/application/src/usecases/pipeline/: handle_job_event.rs  mock_dubbing_completion_tests.rs  mock_dubbing_panic_tests.rs  mock_dubbing_pipeline.rs  mock_dubbing_pipeline_tests.rs  mod.rs  runner_terminalization.rs  start_mock.rs  start_mock_compensation.rs  start_mock_compensation_tests.rs  start_mock_runtime.rs  start_mock_tests.rs
crates/application/src/usecases/project/: create.rs  create_from_youtube.rs  delete.rs  get.rs  handle_job_cancelled.rs  handle_job_completed.rs  import_source.rs  lifecycle.rs  list.rs  mod.rs  recover_interrupted.rs
crates/application/src/usecases/system/: mod.rs  recover_interrupted.rs  tests.rs
crates/application/src/usecases/transcript/: get.rs  import_youtube_subtitles.rs  mod.rs
crates/application/src/worker/: mod.rs  outbox.rs
crates/application/src/worker/outbox/: maintenance.rs  mod.rs  payload_handler.rs  report.rs  retention.rs  tests.rs  worker.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: cancellation.rs  error.rs  event.rs  id.rs  job.rs  lib.rs  manager.rs  manager_terminal_tests.rs  mock_pipeline.rs  progress.rs  stage.rs  status.rs  tests.rs
crates/jobs/src/manager/: cache.rs  cancellation_registry.rs  manager.rs  mapper.rs  mod.rs  mutation_locks.rs  runtime_registry.rs  scheduler_impl.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: dialog.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  media_tools.rs  state.rs  tests.rs
src-tauri/src/bootstrap/: events.rs  media_tools.rs  mod.rs  services.rs  storage.rs  usecases.rs  workers.rs
src-tauri/src/commands/: artifact.rs  job.rs  jobs.rs  media.rs  mod.rs  project.rs
src-tauri/src/dto/: error.rs  job.rs  media.rs  mod.rs  project.rs
src-tauri/src/observability/: config.rs  diagnostic.rs  error.rs  init.rs  mod.rs
(+253 files in other folders)
