[package]
name = "auralis-app"
version = "0.1.0"
description = "Auralis Desktop App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
application = { path = "../crates/application" }
domain = { path = "../crates/domain" }
ports = { path = "../crates/ports" }
jobs = { path = "../crates/jobs" }
adapters-storage = { path = "../crates/adapters-storage" }
adapters-ytdlp = { path = "../crates/adapters-ytdlp" }
adapters-model = { path = "../crates/adapters-model" }
adapters-ffmpeg = { path = "../crates/adapters-ffmpeg" }
tokio = { version = "1.0", features = ["rt", "time", "macros", "sync"] }
tauri-plugin-dialog = "2.7.1"
async-trait = "0.1.89"
