[package]
name = "auralis-app"
version = "0.1.0"
description = "Auralis Desktop App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
application = { path = "../crates/application" }
domain = { path = "../crates/domain" }
ports = { path = "../crates/ports" }
jobs = { path = "../crates/jobs" }
adapters-storage = { path = "../crates/adapters-storage" }
adapters-ytdlp = { path = "../crates/adapters-ytdlp" }
adapters-model = { path = "../crates/adapters-model" }
adapters-ffmpeg = { path = "../crates/adapters-ffmpeg" }
adapters-tauri = { path = "../crates/adapters-tauri" }
tokio = { version = "1.0", features = ["rt", "time", "macros", "sync"] }
tauri-plugin-dialog = "2.7.1"
async-trait = "0.1.89"
tauri-plugin-shell = "2.3.5"
chrono = { version = "0.4.45", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.5"
common = { path = "../crates/common" }

[dev-dependencies]
tempfile = "3.17.1"

[lints]
workspace = true

