[package]
name = "adapters-ffmpeg"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
ports = { path = "../ports" }
async-trait = "0.1.89"
uuid = { version = "1.12.1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["process", "rt", "rt-multi-thread", "macros", "time"] }
thiserror = "2.0"

[lints]
workspace = true

