[package]
name = "adapters-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
ports = { path = "../ports" }
async-trait = "0.1.89"
chrono = "0.4.39"
uuid = { version = "1.12.1", features = ["v4"] }
tokio = { version = "1.43.0", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tempfile = "3.16.0"
