[package]
name = "adapters-tauri"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
application = { path = "../application" }
domain = { path = "../domain" }
ports = { path = "../ports" }
common = { version = "0.1.0", path = "../common" }
async-trait = "0.1.89"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
thiserror = "2.0.11"

[dev-dependencies]
serde_json = "1.0.150"
chrono = "0.4.38"

[lints]
workspace = true

