[package]
name = "adapters-ytdlp"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
ports = { path = "../ports" }
async-trait = "0.1.89"
uuid = { version = "1.12.1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "fs"] }
thiserror = "2"
url = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

