[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
ports = { path = "../ports" }
thiserror = "2.0.11"
async-trait = "0.1.89"
tokio = { version = "1.36.0", features = ["sync", "time", "rt", "macros", "fs"] }
uuid = { version = "1.8.0", features = ["v4"] }
tempfile = "3.10"
bytes = "1.12.1"
tracing = "0.1.44"

[dev-dependencies]
adapters-storage = { path = "../adapters-storage" }
adapters-ytdlp = { path = "../adapters-ytdlp" }
adapters-model = { path = "../adapters-model" }
adapters-ffmpeg = { path = "../adapters-ffmpeg" }
tempfile = "3.10"
chrono = "0.4.45"
