[package]
name = "jobs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["rt", "time", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
